Update GitHub Actions workflow for multiple branches

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,30 @@
+name: test_app_workflow
 on: 
   workflow_dispatch:
   push: 
     branches: 
       - main
+      - master
   pull_request:
     branches:
       - main
-  
-name: test_app_workflow
+      - master
 
 jobs:
   test_workflow:
     runs-on: ubuntu-latest
 
     steps:
-    - name: env_setup
+    - name: setup - checkout
+      uses: actions/checkout@v6
+    - name: setup - python
+      uses: actions/setup-python@v6
+      with:
+        python-version: '3.13' 
+    - name: setup - uv
+      uses: astral-sh/setup-uv@v6
+    - name: setup - dependencies
+      run: sudo apt-get update && sudo apt-get install -y libkrb5-dev gdal-bin libgdal-dev
+      
+    - name: setup - project
+      run: uv sync --locked --all-extras --dev
