--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,4 +38,25 @@ jobs:
       uses: astral-sh/ruff-action@v3
       with:
         args: format --check . 
+
+    - name: testing - unitttests
+      run: |
+           mkdir -p artifacts
+           uv run pytest test_app.py --cov=. --cov-fail-under=80 --cov-report=artifacts/report.json
+      
+    - name: testing - upload artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: test-artifacts
+        path: artifacts/
+        
+    - name: build - run app
+      run: uv run python app.py
+
+    - name: build - ping app
+      run: |
+            sleep 2 
+            curl -s http://127.0.0.1:5000/ > artifacts/response.txt
+      
+      
     
