Implement app PID management in workflow
Add PID handling for app shutdown in workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,7 +52,8 @@ jobs:
         
     - name: build - run app
       run: |
-           uv run python app.py
+           uv run python app.py & echo $! >app.pid
            
-      
-    
+    - name: shutdown
+      if: always()
+      run: kill -INT "$(cat app.pid)" || true
