Refactor app run and shutdown process in workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,8 +52,4 @@ jobs:
         
     - name: build - run app
       run: |
-           uv run python app.py & echo $! >app.pid
-           
-    - name: shutdown
-      if: always()
-      run: kill -INT "$(cat app.pid)" || true
+           timeout --signal=SIGINT 5s uv run python app.py
